# lab-monitoring

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  pyproject.toml
docs/: monitor-design.md
docs/ADR/: ADR_004_postgresql_backup.md
patrol/: registry.json
scripts/: pg_backup.sh  send_report.py  test_pg_archive.py
src/lab_monitoring/: __main__.py  alert_rules.py  alerts.py  backup_monitor.py  config.py  stack_patrol.py  system_check.py  thresholds.py
systemd/: pg-backup.service  pg-backup.timer
tests/: test_advice_state.py  test_b2_benign_classification.py  test_backup_monitor.py  test_cat_memory.py  test_lab_monitor.py  test_main_exit.py  test_system_check.py  test_thresholds.py
